fix font issue on ios

--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -13,6 +13,7 @@
 
 body{
     overflow-x: hidden;
+    color: #242424;
 }
 
 
@@ -77,7 +78,7 @@ a{
 }
 
 .title{
-    font-family: 'Earth Orbiter';
+    font-family: 'Earth Orbiter', sans-serif;
     font-weight: normal;
     font-size: 50px;
     color: #242424;
@@ -105,7 +106,7 @@ a{
 
 #right-nav a{
     color: #242424;
-    font-family: 'Gotham';
+    font-family: 'Gotham', sans-serif;
     font-size: 20px;
     padding: 15px;
     margin: 5px;
@@ -180,7 +181,7 @@ a{
 }
 
 .current-position{
-    font-family: 'Earth Orbiter';
+    font-family: 'Earth Orbiter', sans-serif;
     font-weight: normal;
     font-size: 22.5px;
     color: rgb(0, 0, 0);
@@ -192,7 +193,7 @@ a{
 }
 
 p{
-    font-family: 'GothamBook';
+    font-family: 'GothamBook', sans-serif;
     font-size: 20px;
     line-height: 1.2em;
 }
@@ -219,6 +220,8 @@ p{
 
 #number1 p{
     position: relative;
+    z-index: 4;
+
     -webkit-transform: translate(20px, 50px);
         -ms-transform: translate(20px, 50px);
             transform: translate(20px, 50px);
@@ -243,6 +246,8 @@ p{
 
 #number2 p{
     position: relative;
+    z-index: 4;
+
     -webkit-transform: translate(20px, 50px);
         -ms-transform: translate(20px, 50px);
             transform: translate(20px, 50px);
@@ -251,12 +256,13 @@ p{
 .number{
     font-size: 30px;
     text-align: center;
+    opacity: 1;
 }
 
 .number span{
     font-size: 70px;
     font-weight: bold;
-    font-family: 'Roboto' sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 #concept1{
@@ -265,6 +271,7 @@ p{
     grid-column: 4 / 6;
     -ms-grid-row: 3;
     grid-row: 3;
+    width: 60%;
     -webkit-transform: translate(10%, -20%);
         -ms-transform: translate(10%, -20%);
             transform: translate(10%, -20%);
@@ -837,7 +844,7 @@ p{
 .form-input textarea{
     margin-bottom: 25px;
     padding: 15px;
-    font-family: 'GothamBook';
+    font-family: 'GothamBook', sans-serif;
     font-size: 15px;
 }
 
@@ -864,7 +871,7 @@ textarea{
     left: 66.7%;
     border: none;
     background-color: #80DBDB;
-    font-family: 'Gotham';
+    font-family: 'Gotham', sans-serif;
     font-size: 20px;
 }
 
@@ -879,7 +886,7 @@ footer{
 
 .footer-el{
     margin: 0 auto;
-    font-family: 'GothamBook';
+    font-family: 'GothamBook', sans-serif;
     text-decoration: underline;
     font-size: 20px;
     padding: 10px;
